--- a/css/main.css
+++ b/css/main.css
@@ -1,170 +1,245 @@
 body {
-    margin: 1rem auto;
-    width: 90%;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 .header {
-    display: flex;
-    background-color: #3D81BF;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #3d81bf;
+  align-items: center;
+  justify-content: center;
+}
+
+.navigation {
+  text-align: center;
 }
 
 /* I used flex box role to make the navigation menu responsive */
-.navigation {
-    display: flex;
-    justify-content: space-around;
-    margin-left: 4rem;
-}
-
 .navigation ul {
-    display: flex;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-left: -2.5rem;
 }
 
 .navigation li {
-    margin: 0 6rem;
-    list-style: none;
-    background-color: lightgray;
-    padding: 1rem;
-    border-radius: .7rem;
+  margin: 0 1rem;
+  list-style: none;
+  background-color: lightgray;
+  padding: 1rem;
+  border-radius: 0.7rem;
+}
+
+a {
+  text-decoration: none;
 }
 
 .banner {
-    position: relative;
-    color: red;
-    text-align: center;
+  position: relative;
+  color: red;
+  text-align: center;
+  animation: 2s ease-out 0s 1 fadeIn;
 }
 
 .banner img {
-    width: 100%;
+  width: 100%;
 }
 
 /* Styling search box */
 .search {
-    display: block;
-    width: 70%;
-    margin: 2rem auto;
-    kefooo
+  display: block;
+  width: 70%;
+  margin: 2rem auto;
 }
 
-/* This shows the container cards */
+/* This organizes the container cards */
 .cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin: 1rem auto;
-    justify-content: center; 
-    padding: 2rem;
-    width: 75%;
+  display: grid;
+  gap: 1rem;
+  margin: 1rem auto;
+  justify-content: center;
+  padding: 2rem;
+  width: 75%;
 }
 
-/* This a single card car */
+/* This a single car card*/
 .card {
-    text-align: center;
+  text-align: center;
 }
 
 .details {
-    width: 10rem;
-    background-color: lightgray;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    margin: 3rem auto;
-    align-self: center;
+  width: 10rem;
+  background-color: lightgray;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  margin: 3rem auto;
+  align-self: center;
+}
+
+.cusReview {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 1rem;
 }
 
 .review {
-    background-color: lightgrey;
-    width: 10rem;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    margin-left: 17rem;
-    text-align: center;
-    display: inline-block;
+  background-color: lightgrey;
+  width: 40vw;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  text-align: center;
+  display: inline-block;
 }
 
 .para {
-    display: inline-block;
-    margin-left: 1rem;
-    font-size: 1.5rem;
+  display: inline-block;
+  margin-left: 1rem;
+  font-size: 1rem;
 }
 
 .footer {
-    background-color: #3D81BF;
-    margin-top: 1rem;
-    padding: 2rem;
-    font-size: 3rem;
+  background-color: #3d81bf;
+  margin-top: 1rem;
+  padding: 2rem;
+  font-size: 1.8rem;
+  display: flex;
+}
+
+.footer .links {
+  margin-left: auto;
+}
+
+.facebook {
+  background-color: white;
+  border-radius: 0.5rem;
+  margin: 0 1rem;
+}
+
+.instagram {
+  background-color: white;
+  border-radius: 0.5rem;
+  margin: 0 1rem;
 }
 
 /* This container styles the vehicles page cars */
 .container {
-    margin: 1rem;
+  margin: 1rem;
 }
 
-/* I used flexbox to arrange the card items in horizental direction  */
+/* I used flexbox to arrange the card items in horizontal direction  */
 .vehcard {
-    display: flex;
-    align-items: center;
-    margin: 1.5rem;
-    font-size: 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 1.5rem;
+  font-size: 1.25rem;
 }
 
 .vehcard img {
-    margin-right: 1rem;
+  margin-right: 1rem;
+}
+
+.container {
+  margin: 1rem;
 }
 
 /* Styling the contact page */
 /* I used the grid to arrange the form elements below each other */
 .form {
-    display: grid;
-    transition: opacity 1s linear;
+  display: grid;
 }
 
 .form input {
-    margin: 1rem 0;
-    background-color: lightgray;
-    padding: 1rem;
-    width: 60%;
+  margin: 1rem 0;
+  background-color: lightgray;
+  padding: 1rem;
+  width: 70%;
 }
 
 .form textarea {
-    background-color: lightgray;
+  background-color: lightgray;
 }
 
-/* This animates the form */
+#submit {
+  width: 30vw;
+  margin: 1rem auto;
+}
+
+/* This animates the form sliding */
 @keyframes slide {
-    0% {
-      transform: translateX(-100%);
-    }
-    100% {
-      transform: translateX(0);
-    }
+  0% {
+    transform: translateX(-100%);
   }
-  
-  .form {  
-    /* This role makes the from slide from left*/
-    animation: 1s ease-out 0s 1 slide;
-    padding: 30px;
+  100% {
+    transform: translateX(0);
   }
+}
+
+/* This rule for animation slide from left*/
+.form {
+  animation: 1s ease-out 0s 1 slide;
+  padding: 30px;
+}
 
 /*This section fades in the banner's image*/
-  @keyframes fadeIn {
-    0% {
-        opacity: .1;
-    }
-    100%{
-        opacity: 1;
-    }
+@keyframes fadeIn {
+  0% {
+    opacity: 0.1;
   }
-  
-  .anibanner {
-       animation: 2s ease-out 0s 1 fadeIn;
+  100% {
+    opacity: 1;
   }
-
-  /* This section for the media query to make the site responsive  */
-@media only screen and (min-width: 678px) {
-    .banner img {
-        width: 80%;
-    }
 }
 
+/* This section for the media query to make the site responsive for screens larger than mobile phones */
+@media only screen and (min-width: 678px) {
+  .header {
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+  .navigation ul {
+    margin-left: 1rem;
+    justify-content: space-between;
+  }
 
+  .navigation li {
+    margin: 0 6rem;
+  }
 
+  .banner img {
+    width: 80%;
+  }
 
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
+  .cusReview {
+    justify-content: flex-start;
+  }
+
+  .para {
+    display: inline-block;
+    margin-left: 1rem;
+    font-size: 1.5rem;
+  }
+
+  .review {
+    margin-left: 8rem;
+    width: 20vw;
+  }
+
+  /* Contact page main content container*/
+  .container {
+    margin: 2rem;
+  }
+
+  .form input {
+    width: 60%;
+  }
+
+  .footer {
+    font-size: 3rem;
+  }
+}
